<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494848"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCarro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="190dp"
                android:text="@string/modelo_del_carro"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="167dp" />

            <EditText
                android:id="@+id/etCarro"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:hint="@string/onix"
                android:inputType="textCapCharacters"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:maxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCarro"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="367dp" />

            <TextView
                android:id="@+id/txtPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/placa"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCarro"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="55dp" />

            <EditText
                android:id="@+id/etPlaca"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#00BCD4"
                android:ems="10"
                android:hint="@string/aaa000"
                android:maxLength="6"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:inputType="textCapCharacters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPlaca"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="368dp" />

            <TextView
                android:id="@+id/txtSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="142dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="138dp"
                android:text="@string/serial"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtPlaca"
                app:layout_constraintTop_toBottomOf="@+id/etCarro"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="57dp" />

            <EditText
                android:id="@+id/etSerial"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:hint="@string/aa123456"
                android:maxLength="8"
                android:inputType="textCapCharacters"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etPlaca"
                app:layout_constraintTop_toBottomOf="@+id/txtSerial"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="367dp" />

            <TextView
                android:id="@+id/txtOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/orden_de_trabajo"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPlaca"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="158dp" />

            <EditText
                android:id="@+id/etOrden"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:hint="@string/_000000"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOrden"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="367dp" />

            <TextView
                android:id="@+id/txtAccesorio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="294dp"
                android:text="@string/accesorio"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etOrden"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="95dp" />

            <Spinner
                android:id="@+id/spAcessorio"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#03A9F4"
                app:layout_constraintEnd_toStartOf="@+id/etValorAccesorio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAccesorio"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="364dp" />

            <TextView
                android:id="@+id/txtLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="333dp"
                android:text="@string/lugar"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spAcessorio"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="56dp" />

            <Spinner
                android:id="@+id/spLugar"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#03A9F4"
                app:layout_constraintEnd_toStartOf="@+id/etValorLugar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLugar"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="367dp" />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="330dp"
                android:text="@string/fecha"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spLugar"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="59dp" />

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnFecha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFecha"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="367dp" />

            <Button
                android:id="@+id/btnFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Fecha"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etValorLugar" />

            <Button
                android:id="@+id/btnNuevo"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="67dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btnNuevoString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAgregar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFecha" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btnAgregarString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFecha" />

            <EditText
                android:id="@+id/etValorAccesorio"
                android:layout_width="127dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:hint="@string/TresPuntos"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAccesorio" />

            <EditText
                android:id="@+id/etValorLugar"
                android:layout_width="127dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="#03A9F4"
                android:ems="10"
                android:hint="@string/TresPuntos"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#B5A9A9"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLugar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>