<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494848"
    tools:context=".ui.slideshow.SlideshowFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtUtiAceesorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="210dp"
                    android:text="@string/accesorioAddString"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etNombreAcc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    android:backgroundTint="#03A9F4"
                    android:ems="10"
                    android:hint="@string/nombreAccString"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B5A9A9"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerAddAcce" />

                <EditText
                    android:id="@+id/etValorAcc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    android:backgroundTint="#03A9F4"
                    android:ems="10"
                    android:hint="@string/valorAcces"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B5A9A9"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNombreAcc" />

                <Button
                    android:id="@+id/btnAgregarAcc"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/AgregarString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etValorAcc" />

                <TextView
                    android:id="@+id/txtUtiLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="239dp"
                    android:text="@string/LugarAddString"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnAgregarAcc" />

                <EditText
                    android:id="@+id/txtLugarAgregar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    android:backgroundTint="#03A9F4"
                    android:ems="10"
                    android:hint="@string/nombreLugarString"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B5A9A9"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spAddLugar" />

                <EditText
                    android:id="@+id/txtValorLugar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    android:backgroundTint="#03A9F4"
                    android:ems="10"
                    android:hint="@string/valorAgregadoLug"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B5A9A9"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtLugarAgregar" />

                <Button
                    android:id="@+id/btnAgregarLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="285dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/AgregarString"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtValorLugar" />

                <Spinner
                    android:id="@+id/spinnerAddAcce"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUtiAceesorio" />

                <Spinner
                    android:id="@+id/spAddLugar"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUtiLugar" />

                <Button
                    android:id="@+id/btnEditarAcc"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/EditarString"
                    app:layout_constraintStart_toEndOf="@+id/btnAgregarAcc"
                    app:layout_constraintTop_toBottomOf="@+id/etValorAcc" />

                <Button
                    android:id="@+id/btnEliminarAcc"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/EliminarString"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnEditarAcc"
                    app:layout_constraintTop_toBottomOf="@+id/etValorAcc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>